Added 'Simulator' section with the flash embed

--- a/simulator.html
+++ b/simulator.html
@@ -1,13 +1,11 @@
-
-<html>
-  <head>
-    <title>LightXlab</title>
-    <meta name="description" content="LightXlab : A Simulation program which simulates ray optics in plane mirror , spherical mirror , parabolic mirror etc.">
-    <meta name="keywords" content="LightXlab , ray optics , satvik , physics , simulation , flash , programming ">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  </head>
-  <frameset rows="*">
-    <frame frameborder=0 src="/LightXlab.swf" name="dot_tk_frame_content" scrolling="auto" noresize>
-  </frameset>
-</html>
-
+---
+layout: simulator
+title: Simulator
+permalink: /simulator/
+---
+<style> 
+  html,body {
+    max-height: 100%;
+  }
+</style>
+<embed style = "height:100%;width:100%;" type = "application/x-shockwave-flash" src="/LightXlab.swf">
