--- a/simulator.html
+++ b/simulator.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   </head>
   <frameset rows="*">
-    <frame frameborder=0 src="/LightXlab.swf" name="dot_tk_frame_content" scrolling="auto" noresize>
+    <frame frameborder=0 src="./LightXlab.swf" name="dot_tk_frame_content" scrolling="auto" noresize>
   </frameset>
 </html>
 
