--- a/simulator.html
+++ b/simulator.html
@@ -5,7 +5,7 @@ permalink: /simulator/
 ---
 <style> 
   html,body {
-    max-height: 100%;
+     height: 100%;
   }
 </style>
 <embed style = "height:100%;width:100%;" type = "application/x-shockwave-flash" src="/LightXlab.swf">
