--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ permalink: /
                 <a href="{{ "/simulator" | prepend: site.baseurl }}" class="btn btn-theme btn-outline btn-lg dmbutton">LightXLab</a></p>
             </div>
             <div class="col-lg-8 col-lg-offset-2 himg">
-                <img src="{{ "/assets/img/browser.png" | prepend: site.baseurl }}" class="img-responsive">
+                <img src="{{ "/assets/img/shot1.png" | prepend: site.baseurl }}" class="img-responsive">
             </div>
         </div><!-- /row -->
     </div> <!-- /container -->
