--- a/index.html
+++ b/index.html
@@ -21,23 +21,32 @@ permalink: /
         <div class="row centered">
             <div class="col-md-4">
                 <i class="fa fa-heart-o"></i>
-                <h4>User Friendly</h4>
-                <p>LightXlab has been developed keeping simplicity in mind, Anyone can Start using program with minutes.</p>
+                <h4>Handsomely Crafted</h4>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                 <p><br/><a href="#" class="btn btn-theme">More Info</a></p>
             </div>
             <div class="col-md-4">
                 <i class="fa fa-flask"></i>
-                <h4>Multiple modes and features</h4>
-                <p>LightXlab has several customizable settings like colors , ray density , opacity and iteration speed.</p>
+                <h4>Retina Ready</h4>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                 <p><br/><a href="#" class="btn btn-theme">More Info</a></p>
             </div>
             <div class="col-md-4">
                 <i class="fa fa-trophy"></i>
-                <h4>Open Source!</h4>
-                <p>LightXlab is Open source ! That means its forever growing </p>
+                <h4>Quality Theme</h4>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                 <p><br/><a href="#" class="btn btn-theme">More Info</a></p>
             </div>		 				
         </div>
     </div><! --/container -->
 </div><! --/service -->
 
+<div class="container mtb">
+    <div class="row">
+        <div class="col-lg-4 col-lg-offset-1">
+            <h4>More About Our Agency.</h4>
+            <p>{{ site.about }}</p>
+            <p><br/><a href="{{ "/about/" | prepend: site.baseurl }}" class="btn btn-theme">More Info</a></p>
+        </div>
+    </div><! --/row -->
+</div><! --/container -->
