--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,33 @@ permalink: /contact/
     <div class="row">
         <div class="col-lg-8">
             <h4>Just Get In Touch!</h4>
+        
             <div class="hline"></div>
-                <p>{{ site.about }}</p>
+                <div class = "row">
+ <div class = "col-lg-8">
+    <div id="wufoo-sylqdc0ouam17">
+Fill out my <a href="https://satu0king.wufoo.com/forms/sylqdc0ouam17">online form</a>.
+</div>
+<div id="wuf-adv" style="font-family:inherit;font-size: small;color:#a7a7a7;text-align:center;display:block;">Online contact and registration forms from <a href="http://www.wufoo.com">Wufoo</a>.</div>
+<script type="text/javascript">var sylqdc0ouam17;(function(d, t) {
+var s = d.createElement(t), options = {
+'userName':'satu0king',
+'formHash':'sylqdc0ouam17',
+'autoResize':true,
+'height':'520',
+'async':true,
+'host':'wufoo.com',
+'header':'show',
+'ssl':true};
+s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
+s.onload = s.onreadystatechange = function() {
+var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
+try { sylqdc0ouam17 = new WufooForm();sylqdc0ouam17.initialize(options);sylqdc0ouam17.display(); } catch (e) {}};
+var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
+})(document, 'script');</script>
+
+ </div>
+</div>
                 <form role="form">
                   <div class="form-group">
                     <label for="InputName1">Your Name</label>
