--- a/tutorial.html
+++ b/tutorial.html
@@ -6,13 +6,28 @@ permalink: /tutorial/
 <div class="container mtb">
     <div class="row">
         <div class="col-lg-8">
-            <img class="img-responsive" src="{{ "/assets/img/lightxlab.png" | prepend: site.baseurl }}" alt="">
+            <h4>Your First Simulation</h4>
+            <p>
+            The first time you try using this program could be confusing , but once u get started its smooth sailing. 
+            </p>
+            <p>
+            Follow the following steps :
+            1) Create a light beam<br>
+            2) Move it by dragging the beam source <br>
+            3) Rotate it by clicking the mouse on the ends of the beam source <br>
+            4) Add a couple of plane mirrors <br>
+            5) Rotate and move the plane mirrors light the light beam <br>
+            6) Experiment !! <br>
+            </p>
+            <h5>Tips and Warnings</h5>
+            <p>
+            1) Avoid trapping light in mirrors as it may cause system to crash <br>
+            2) Increased Iterations can cause system to crash<br>
+            3) Lowering opacity helps visibilty of ray over lap<br>
+            4) Use shades to isolate regions<br>
+            5) Run Program in full screen for better experience<br>
+            </p>
         </div>
-        <div class="col-lg-8">
-            <h4>About LightXlab.</h4>
-        </div>
-            <p>LightXlab is an interactive program to simulate ray optics. The objective is to make learning fun and interesting. This project is now open source.</p>
-            <p>Project developed by Satvik Ramaprasad</p>
-            <p>Website designed by Aniruddha Mysore</p>
+            
     </div><! --/row -->
 </div><! --/container -->
