--- a/tutorial.html
+++ b/tutorial.html
@@ -6,7 +6,7 @@ permalink: /tutorial/
 <div class="container mtb">
     <div class="row">
         <div class="col-lg-8">
-            <h4>Your First Simulation</h4>
+            <h4>Your First Simulation</h4><br><br>
             <p>
             The first time you try using this program could be confusing , but once u get started its smooth sailing. 
             </p>
@@ -19,7 +19,7 @@ permalink: /tutorial/
             5) Rotate and move the plane mirrors light the light beam <br>
             6) Experiment !! <br>
             </p>
-            <h5>Tips and Warnings</h5>
+            <h5>Tips and Warnings</h5><br>
             <p>
             1) Avoid trapping light in mirrors as it may cause system to crash <br>
             2) Increased Iterations can cause system to crash<br>
