--- a/tutorial.html
+++ b/tutorial.html
@@ -6,12 +6,12 @@ permalink: /tutorial/
 <div class="container mtb">
     <div class="row">
         <div class="col-lg-8">
-            <h4>Your First Simulation</h4><br><br>
+            <h4>Your First Simulation</h4><br>
             <p>
-            The first time you try using this program could be confusing , but once u get started its smooth sailing. 
+            <br>The first time you try using this program could be confusing , but once u get started its smooth sailing. 
             </p>
             <p>
-            Follow the following steps :
+            Follow the following steps :<br>
             1) Create a light beam<br>
             2) Move it by dragging the beam source <br>
             3) Rotate it by clicking the mouse on the ends of the beam source <br>
@@ -19,7 +19,7 @@ permalink: /tutorial/
             5) Rotate and move the plane mirrors light the light beam <br>
             6) Experiment !! <br>
             </p>
-            <h5>Tips and Warnings</h5><br>
+            <h4>Tips and Warnings</h4><br>
             <p>
             1) Avoid trapping light in mirrors as it may cause system to crash <br>
             2) Increased Iterations can cause system to crash<br>
