--- a/tutorial.html
+++ b/tutorial.html
@@ -8,7 +8,7 @@ permalink: /tutorial/
         <div class="col-lg-8">
             <h4>Your First Simulation</h4><br>
             <p>
-            <br>The first time you try using this program could be confusing , but once u get started its smooth sailing. 
+            The first time you try using this program could be confusing , but once u get started its smooth sailing. 
             </p>
             <p>
             Follow the following steps :<br>
@@ -19,7 +19,7 @@ permalink: /tutorial/
             5) Rotate and move the plane mirrors light the light beam <br>
             6) Experiment !! <br>
             </p>
-            <h4>Tips and Warnings</h4><br>
+            <h4>Tips and Warnings</h4>
             <p>
             1) Avoid trapping light in mirrors as it may cause system to crash <br>
             2) Increased Iterations can cause system to crash<br>
