--- a/tutorial.html
+++ b/tutorial.html
@@ -8,7 +8,7 @@ permalink: /tutorial/
         <div class="col-lg-8">
             <h4>Your First Simulation</h4>
             <p>
-            The first time you try using this program could be confusing , but once u get started its smooth sailing. 
+            The first time you try using this program ,it could be confusing , but once u get started its smooth sailing. 
             </p>
             <p>
             Follow the following steps :<br>
