--- a/tutorial.html
+++ b/tutorial.html
@@ -19,6 +19,7 @@ permalink: /tutorial/
             5) Rotate and move the plane mirrors light the light beam <br>
             6) Experiment !! <br>
             </p>
+            <img src="{{ "/assets/img/shot3.png" | prepend: site.baseurl }}" class="img-responsive">
             <h4>Tips and Warnings</h4>
             <p>
             1) Avoid trapping light in mirrors as it may cause system to crash <br>
@@ -27,6 +28,7 @@ permalink: /tutorial/
             4) Use shades to isolate regions<br>
             5) Run Program in full screen for better experience<br>
             </p>
+            <img src="{{ "/assets/img/shot4.png" | prepend: site.baseurl }}" class="img-responsive">
         </div>
             
     </div><! --/row -->
