--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
             <div class="hline"></div>
                 <p>
                      Wesbite Designer : Satvik Ramaprasad<br/>
-                     Contact: <a href = "aniruddha.mysore@gmail.com"> Email </a><br/>
+                     Contact: <a href = "satvik@gmail.com"> Email </a><br/>
                     
                 </p>
                 <p>
