--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ permalink: /
             <div class="col-md-4">
                 <i class="fa fa-heart-o"></i>
                 <h4>User Friendly</h4>
-                <p>LightXlab has been developed keeping simplicity in mind, Anyone can Start using program with minutes.</p>
+                <p>LightXlab has been developed keeping simplicity in mind, Anyone can start using the program with minutes.</p>
                 <p><br/><a href="#" class="btn btn-theme">More Info</a></p>
             </div>
             <div class="col-md-4">
