open source page

--- a/open source.html
+++ b/open source.html
@@ -1,7 +1,7 @@
 ---
 layout: about
-title: Getting Started
-permalink: /tutorial/
+title: Open Source
+permalink: /open source/
 ---
 <div class="container mtb">
     <div class="row">
