Open source updates

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@ permalink: /
 ---
 <div id="headerwrap">
     <div class="container">
-        <div class="row">
+        <div class="row"
             <div class="col-lg-8 col-lg-offset-2">
-                <h1> Launch simulator </h1> 
+                <h1> Launch Simulator </h1> 
                 <a href="{{ "/simulator" | prepend: site.baseurl }}" class="btn btn-theme btn-outline btn-lg dmbutton">LightXLab</a></p>
             </div>
             <div class="col-lg-8 col-lg-offset-2 himg">
