--- a/open source.html
+++ b/open source.html
@@ -6,7 +6,32 @@ permalink: /open source/
 <div class="container mtb">
     <div class="row">
         <div class="col-lg-8">
-             
+            <div class="col-lg-8 col-lg-offset-2">
+                <h1> Download Source </h1> 
+                <a href="{{ "/lightxlab v1.0.fla" | prepend: site.baseurl }}" class="btn btn-theme btn-outline btn-lg dmbutton">LightXLab v1.0</a></p>
+            </div>
+            <h4>MIT License (MIT)</h4>
+<p>
+Copyright (c) 2015 LightXlab <br>
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:<br>
+
+The above copyright notice and this permission notice shall be included in
+all copies or substantial portions of the Software.<br>
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+THE SOFTWARE.<br>
+   </p>         
         </div>            
     </div><! --/row -->
 </div><! --/container -->
