--- a/open source.html
+++ b/open source.html
@@ -10,28 +10,35 @@ permalink: /open source/
                 <h1> Download Source </h1> 
                 <a href="{{ "/lightxlab v1.0.fla" | prepend: site.baseurl }}" class="btn btn-theme btn-outline btn-lg dmbutton">LightXLab v1.0</a></p>
             </div>
-            <h4>MIT License (MIT)</h4>
-<p>
-Copyright (c) 2015 LightXlab <br>
+            <h1>MIT License</h1>
+      
+
+
+      <div class="clearfix">
+        <div class="license-body">
+          <pre id="license-text">The MIT License (MIT)
+
+Copyright (c) [year] [fullname]
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
 in the Software without restriction, including without limitation the rights
 to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 copies of the Software, and to permit persons to whom the Software is
-furnished to do so, subject to the following conditions:<br>
+furnished to do so, subject to the following conditions:
 
-The above copyright notice and this permission notice shall be included in
-all copies or substantial portions of the Software.<br>
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
 
 THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
-THE SOFTWARE.<br>
-   </p>         
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
+</pre>
+        </div> <!-- /license-body -->
         </div>            
     </div><! --/row -->
 </div><! --/container -->
