--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@ permalink: /
                 <i class="fa fa-heart-o"></i>
                 <h4>User Friendly</h4>
                 <p>LightXlab has been developed keeping simplicity in mind, Anyone can start using the program with minutes.</p>
-                <p><br/><a href="#" class="btn btn-theme">More Info</a></p>
+                <p><br/><a href="{{ "/tutorial/" | prepend: site.baseurl }}" class="btn btn-theme">More Info</a></p>
             </div>
             <div class="col-md-4">
                 <i class="fa fa-flask"></i>
                 <h4>Multiple modes and features</h4>
                 <p>LightXlab has several customizable settings like colors , ray density , opacity and iteration speed.</p>
-                <p><br/><a href="#" class="btn btn-theme">More Info</a></p>
+                <p><br/><a href="{{ "/tutorial/" | prepend: site.baseurl }}" class="btn btn-theme">More Info</a></p>
             </div>
             <div class="col-md-4">
                 <i class="fa fa-trophy"></i>
                 <h4>Open Source!</h4>
                 <p>LightXlab is Open source ! That means its forever growing </p>
-                <p><br/><a href="#" class="btn btn-theme">More Info</a></p>
+                <p><br/><a href="{{ "/open source/" | prepend: site.baseurl }}" class="btn btn-theme">More Info</a></p>
             </div>		 				
         </div>
     </div><! --/container -->
