--- a/open source.html
+++ b/open source.html
@@ -7,8 +7,8 @@ permalink: /open source/
     <div class="row">
         <div class="col-lg-8">
             <div class="col-lg-8 col-lg-offset-2">
-                <h1> Download Source </h1> 
-                <a href="{{ "/lightxlab v1.0.fla" | prepend: site.baseurl }}" class="btn btn-theme btn-outline btn-lg dmbutton">LightXLab v1.0</a></p>
+                <h1> Download Source </h1> <br>
+                  <p><a href="{{ "/lightxlab v1.0.fla" | prepend: site.baseurl }}" class="btn btn-theme">LightXLab v1.0</a></p>
             </div>
             <h1>MIT License</h1>
       
