--- a/open source.html
+++ b/open source.html
@@ -10,6 +10,12 @@ permalink: /open source/
                 <h1> Download Source </h1> <br>
                   <p><a href="{{ "/lightxlab v1.0.fla" | prepend: site.baseurl }}" class="btn btn-theme">LightXLab v1.0</a></p>
             </div>
+            <h1>MIT License</h1>
+        </div>
+        </div><! --/row -->
+</div><! --/container -->
+  
+
 
       <div class="clearfix">
         <div class="license-body">
@@ -37,5 +43,4 @@ SOFTWARE.
 </pre>
         </div> <!-- /license-body -->
         </div>            
-    </div><! --/row -->
-</div><! --/container -->
+    
