--- a/open source.html
+++ b/open source.html
@@ -10,7 +10,6 @@ permalink: /open source/
                 <h1> Download Source </h1> <br>
                   <p><a href="{{ "/lightxlab v1.0.fla" | prepend: site.baseurl }}" class="btn btn-theme">LightXLab v1.0</a></p>
             </div>
-            <h1>MIT License</h1>
         </div>
         </div><! --/row -->
 </div><! --/container -->
@@ -40,6 +39,11 @@ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
+{% highlight ruby %}
+def foo
+  puts 'foo'
+end
+{% endhighlight %}
 </pre>
         </div> <!-- /license-body -->
         </div>            
