--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ permalink: /
             <div class="col-md-4">
                 <i class="fa fa-trophy"></i>
                 <h4>Open Source!</h4>
-                <p>LightXlab is Open source under MIT Licence ! That means its forever growing </p>
+                <p>LightXlab is Open source under MIT License ! That means its forever growing </p>
                 <p><br/><a href="{{ "/open source/" | prepend: site.baseurl }}" class="btn btn-theme">More Info</a></p>
             </div>		 				
         </div>
