--- a/open source.html
+++ b/open source.html
@@ -20,7 +20,7 @@ permalink: /open source/
         <div class="license-body">
           <pre id="license-text">The MIT License (MIT)
 
-Copyright (c) [year] [fullname]
+Copyright © 2015 LighXlab
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
