--- a/open source.html
+++ b/open source.html
@@ -10,6 +10,10 @@ permalink: /open source/
                 <h1> Download Source </h1> <br>
                   <p><a href="{{ "/lightxlab v1.0.fla" | prepend: site.baseurl }}" class="btn btn-theme">LightXLab v1.0</a></p>
             </div>
+        </div>
+    </div>
+            <div class="row">
+        <div class="col-lg-8">
       <div class="clearfix">
         <div class="license-body">
           <pre id="license-text">The MIT License (MIT)
