--- a/open source.html
+++ b/open source.html
@@ -12,6 +12,8 @@ permalink: /open source/
             </div>
         </div>
     </div>
+    </div>
+<div class="container mtb">
             <div class="row">
         <div class="col-lg-8">
       <div class="clearfix">
