--- a/tutorial.html
+++ b/tutorial.html
@@ -5,7 +5,8 @@ permalink: /tutorial/
 ---
 <div class="container mtb">
     <div class="row">
-        <div class="col-lg-8">
+        <div class="col-lg-8-lg-offset-2">
+            
             <h4>Your First Simulation</h4>
             <p>
             The first time you try using this program ,it could be confusing , but once u get started its smooth sailing. 
