--- a/open source.html
+++ b/open source.html
@@ -7,7 +7,7 @@ permalink: /open source/
     <div class="row">
         <div class="col-lg-8">
             
-                <h1> Download Source </h1> <br>
+                <h1> Download Source </h1> 
                   <p><a href="{{ "/lightxlab v1.0.fla" | prepend: site.baseurl }}" class="btn btn-theme">LightXLab v1.0</a></p>
             
         </div>
