--- a/tutorial.html
+++ b/tutorial.html
@@ -5,8 +5,8 @@ permalink: /tutorial/
 ---
 <div class="container mtb">
     <div class="row">
-        <div class="col-lg-8-lg-offset-2">
-            
+        <div class="col-lg-8">
+         <div class="col-lg-8-lg-offset-2">
             <h4>Your First Simulation</h4>
             <p>
             The first time you try using this program ,it could be confusing , but once u get started its smooth sailing. 
@@ -31,6 +31,6 @@ permalink: /tutorial/
             </p>
             <img src="{{ "/assets/img/shot2.png" | prepend: site.baseurl }}" class="img-responsive">
         </div>
-            
+            </div>
     </div><! --/row -->
 </div><! --/container -->
