--- a/simulator.html
+++ b/simulator.html
@@ -8,4 +8,7 @@ permalink: /simulator/
      height: 100%;
   }
 </style>
+if (screen.width <= 699) {
+document.location = "http://lightxlab.com/simulator%20mobile/";
+}
 <embed style = "height:100%;width:100%;" type = "application/x-shockwave-flash" src="/LightXlab.swf">
