--- a/lightxlab mobile.html
+++ b/lightxlab mobile.html
@@ -22,7 +22,7 @@ permalink: /simulator mobile/
     <style>html, body {width: 100%; height: 100%}</style>
   </head>
   <body style="margin: 0; overflow: hidden">
-    <div id="LightXlab" style="width: screen.width; height: screen.height">
+    <div id="LightXlab" style="width: 1000; height: 800">
     </div>
     <script>
       
