--- a/simulator.html
+++ b/simulator.html
@@ -8,7 +8,13 @@ permalink: /simulator/
      height: 100%;
   }
 </style>
-
+<script type="text/javascript">
+  <!--
+  if (screen.width <= 900) {
+    window.location = "http://lightxlab.com/simulator%20mobile/";
+  }
+  //-->
+</script>
 <embed style = "height:100%;width:100%;" type = "application/x-shockwave-flash" src="/LightXlab.swf">
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
