--- a/simulator.html
+++ b/simulator.html
@@ -13,6 +13,8 @@ permalink: /simulator/
   if (screen.width <= 900) {
     window.location = "http://lightxlab.com/simulator%20mobile/";
   }
+  else if(/Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent)){
+window.location = "http://lightxlab.com/simulator%20mobile/";
   //-->
 </script>
 <embed style = "height:100%;width:100%;" type = "application/x-shockwave-flash" src="/LightXlab.swf">
