--- a/simulator.html
+++ b/simulator.html
@@ -10,12 +10,11 @@ permalink: /simulator/
 </style>
 <script type="text/javascript">
   <!--
-  if (screen.width <= 900) {
-    window.location = "http://lightxlab.com/simulator%20mobile/";
-  }
-  else if(/Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent)){
+  if(!swfobject.hasFlashPlayerVersion("1"))
+{
+  alert("Redirecting you to mobile version" );
 window.location = "http://lightxlab.com/simulator%20mobile/";
- }
+}
   //-->
 </script>
 <embed style = "height:100%;width:100%;" type = "application/x-shockwave-flash" src="/LightXlab.swf">
