--- a/contact.html
+++ b/contact.html
@@ -44,13 +44,13 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
             <h4>Our Contact Details</h4>
             <div class="hline"></div>
                 <p>
-                     Wesbite Designer : Satvik Ramaprasad<br/>
-                     Contact: <a href = "satvik@gmail.com"> Email </a><br/>
+                     Project Developer : Satvik Ramaprasad<br/>
+                     Contact: <a href = "mailto:satvik@gmail.com"> Email </a><br/>
                     
                 </p>
                 <p>
                   Wesbite Designer : <a href = "https://github.com/AniMysore74"> Aniruddha Mysore </a> <br/>
-                  Contact: <a href = "aniruddha.mysore@gmail.com"> Email </a><br/>
+                  Contact: <a href = "mailto:aniruddha.mysore@gmail.com"> Email </a><br/>
                   Blog : <a href="http://thenewcon.com"> The New Age Tech Connoisseur </a>
               </p>
             
