--- a/simulator.html
+++ b/simulator.html
@@ -10,7 +10,11 @@ permalink: /simulator/
 </style>
 <script type="text/javascript">
   <!--
-  if(!swfobject.hasFlashPlayerVersion("1"))
+  if(swfobject.hasFlashPlayerVersion("1"))
+{
+}
+else
+}
 {
   alert("Redirecting you to mobile version" );
 window.location = "http://lightxlab.com/simulator%20mobile/";
