--- a/simulator.html
+++ b/simulator.html
@@ -10,15 +10,12 @@ permalink: /simulator/
 </style>
 <script type="text/javascript">
   <!--
-  if(swfobject.hasFlashPlayerVersion("1"))
-{
-}
-else
-}
-{
-  alert("Redirecting you to mobile version" );
+  if (screen.width <= 900) {
+    window.location = "http://lightxlab.com/simulator%20mobile/";
+  }
+  else if(/Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent)){
 window.location = "http://lightxlab.com/simulator%20mobile/";
-}
+ }
   //-->
 </script>
 <embed style = "height:100%;width:100%;" type = "application/x-shockwave-flash" src="/LightXlab.swf">
@@ -27,8 +24,6 @@ window.location = "http://lightxlab.com/simulator%20mobile/";
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
   ga('create', 'UA-61876800-1', 'auto');
   ga('send', 'pageview');
-
 </script>
