--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ permalink: /
     <div class="container">
         <div class="row"
             <div class="col-lg-8 col-lg-offset-2">
-            <h1> LightXlab - A ray optics Simulator</h1>
+            <h1> LightXlab - A Ray Optics Simulator</h1>
                 <a href="{{ "/simulator" | prepend: site.baseurl }}" class="btn btn-theme btn-outline btn-lg dmbutton">Launch Simulator</a></p>
             </div>
             <div class="col-lg-8 col-lg-offset-2 himg">
