--- a/tutorial.html
+++ b/tutorial.html
@@ -17,7 +17,7 @@ permalink: /tutorial/
             2) Move it by dragging the beam source <br>
             3) Rotate it by clicking the mouse on the ends of the beam source <br>
             4) Add a couple of plane mirrors <br>
-            5) Rotate and move the plane mirrors light the light beam <br>
+            5) Rotate and move the plane mirrors like the light beam <br>
             6) Experiment !! <br>
             </p>
             <img src="{{ "/assets/img/shot3.png" | prepend: site.baseurl }}" class="img-responsive">
