--- a/simulator.html
+++ b/simulator.html
@@ -18,7 +18,7 @@ window.location = "http://lightxlab.com/simulator%20mobile/";
  }
   //-->
 </script>
-<embed style = "height:100%;width:100%;" type = "application/x-shockwave-flash" src="http://satu0king.github.io/LightXlab/LightXlab.html">
+<embed style = "height:100%;width:100%;" type = "application/x-shockwave-flash" src="http://satu0king.github.io/LightXlab/LightXlab.swf">
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
