--- a/open source.html
+++ b/open source.html
@@ -8,7 +8,8 @@ permalink: /open source/
         <div class="col-lg-8">
             
                 <h1> Download Source </h1> 
-                  <p><a href="{{ "/lightxlab v1.0.fla" | prepend: site.baseurl }}" class="btn btn-theme">LightXLab v1.0</a></p>
+                  <p><a href="{{ "/lightxlab v1.0.fla" | prepend: site.baseurl }}" class="btn btn-theme">LightXLab v1.0 Flash</a></p>
+            <p><a href="{{ "https://github.com/satu0king/lightxlabHTML5" }}" class="btn btn-theme">LightXLab v1.0 HTML5</a></p>
             
         </div>
     </div>
