--- a/simulator.html
+++ b/simulator.html
@@ -11,7 +11,7 @@ permalink: /simulator/
 <script type="text/javascript">
   <!--
   if (screen.width <= 900) {
-    window.location = "http://lightxlab.com/simulator%20mobile/";
+    window.location = "/simulator%20mobile/";
   }
   else if(/Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent)){
 window.location = "http://lightxlab.com/simulator%20mobile/";
